logs/mrsd_ros_tutorials/build.make.298.log.stderr
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/subscribe_pc_node.cpp: In member function ‘bool ImageConverter::transformCB(mrsd_ros_tutorials::SaveData::Request&, mrsd_ros_tutorials::SaveData::Response&)’:
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/subscribe_pc_node.cpp:145:7: error: ‘tf_listener’ was not declared in this scope
       tf_listener.lookupTransform("apriltag_frame","kinect2_rgb_optical_frame",
       ^
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/subscribe_pc_node.cpp:146:46: error: ‘tf_apriltag’ was not declared in this scope
                                ros::Time(0), tf_apriltag);
                                              ^
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/subscribe_pc_node.cpp:156:102: error: ‘tf_listener’ was not declared in this scope
     pcl_ros::transformPointCloud ("transformed_apriltag_frame", *kinect_color_pc,*cloud_transformed, tf_listener);
                                                                                                      ^
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/subscribe_pc_node.cpp:159:5: error: ‘br2’ was not declared in this scope
     br2.sendTransform(tf::StampedTransform(tf_apriltag, ros::Time::now(), "transformed_apriltag_frame","world"));
     ^
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/subscribe_pc_node.cpp:159:44: error: ‘tf_apriltag’ was not declared in this scope
     br2.sendTransform(tf::StampedTransform(tf_apriltag, ros::Time::now(), "transformed_apriltag_frame","world"));
                                            ^
make[2]: *** [CMakeFiles/subscribe_pc_node.dir/src/subscribe_pc_node.cpp.o] Error 1
make[1]: *** [CMakeFiles/subscribe_pc_node.dir/all] Error 2
make: *** [all] Error 2
